k8s/infra/network/gateway/gateway-cf.yaml
# gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cloudflared
  namespace: gateway
  annotations:
    cert-manager.io/issuer: cloudflare-cluster-issuer
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.1.50
  listeners:
    - protocol: HTTPS
      port: 443
      name: https-gateway
      hostname: "*.schaermu.ch"
      tls:
        certificateRefs:
          - kind: Secret
            name: cert-schaermu
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTPS
      port: 443
      name: https-domain-gateway
      hostname: schaermu.ch
      tls:
        certificateRefs:
          - kind: Secret
            name: cert-schaermu
      allowedRoutes:
        namespaces:
          from: All
