k8s/infra/network/gateway/gateway-internal.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  namespace: gateway
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-cluster-issuer-staging
spec:
  gatewayClassName: cilium
  infrastructure:
    labels:
      l2.cilium.io/ip-pool: default-ip-pool
  addresses:
    - type: IPAddress
      value: 192.168.1.50
  listeners:
  - name: http-gateway
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            https-upgrade: "true"
  - name: https-gateway
    protocol: HTTPS
    port: 443
    hostname: "*.lab.schaermu.ch"
    tls:
      certificateRefs:
      - kind: Secret
        name: cert-lab-schaermu
    allowedRoutes:
      namespaces:
        from: All
  - name: https-domain-gateway
    protocol: HTTPS
    port: 443
    hostname: lab.schaermu.ch
    tls:
      certificateRefs:
      - kind: Secret
        name: cert-lab-schaermu
    allowedRoutes:
      namespaces:
        from: All
